# veritas-harness

./: .gitignore  LICENSE  README.md  config.toml.example  pyproject.toml
docs/: 2026-05-23-research-cli-design.md
examples/01-ai-replaces-worker/: final-report.md  finalize-summary.json  query-1.json  query-2.json  query-3.json  query-4.json  scrape-1.json  scrape-2.json  scrape-3.json  scrape-4.json  scrape-5.json  scrape-6.json  scrape-7.json  scrape-8.json  scrape-9.json  scrape-manifest.tsv  source-claims.tsv
examples/02-shenzhen-ai-regulations/: draft-report.md  draft-research.md  final-report.md  finalize-summary.json  query-1.json  query-2.json  query-3.json  query-4.json  scrape-1.json  scrape-2.json  scrape-3.json  scrape-4.json  scrape-5.json  scrape-6.json  scrape-manifest.tsv  source-audit.tsv  source-claims.tsv
examples/03-battery-recycling/: draft-report.md  finalize-summary.json  scrape-1.json  scrape-2.json  scrape-3.json  scrape-4.json  scrape-5.json  scrape-6.json  scrape-manifest.tsv  source-audit.tsv  source-claims.tsv
examples/04-cross-border-dispute/: final-report.md  finalize-summary.json
examples/05-confidential-info-guide/: draft-report.md  finalize-summary.json  source-audit.tsv
examples/06-noncompete-cases/: draft-report.md  (+1 more)
tests/: test_backend_opencli.py  test_backend_reader_selfhost.py  test_backend_yuandian.py  test_backends.py  test_config.py  test_distribution.py  test_evidence.py  test_finalize.py  test_hallucination.py  test_inject.py  test_regtrack.py  test_scrape.py  test_search.py  test_server.py  test_verify.py
(+35 files in other folders)
